--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "solstaker",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://scriptless.github.io/solstaker-spa",
   "dependencies": {
     "@craco/craco": "^6.2.0",
     "@testing-library/jest-dom": "^5.14.1",
